--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 
 
     <body>
-        <canvas id="glcanvas"></canvas>
+    <canvas id="glcanvas" width="1280" height="720"></canvas>
     </body>
 </html>
